--- a/aeromap/src/styles/App.css
+++ b/aeromap/src/styles/App.css
@@ -1,6 +1,6 @@
 body {
-    /* background-color: #000030; */
-    background-color: LightBlue;
+    background-color: #000030;
+    /* background-color: LightBlue; */
 }
 
 /* * {
